Audio: prevent assertion when opening streams fail

Our assertions to prevent streams from being destroyed while active are
a bit strict. We should always mark the stream as stopped before
destroying it to prevent assertion failures.

Task-number: QTBUG-141395
Change-Id: I69bf2c3dcdf7130225ad9495744d0fef6703d5ec
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit c9c3058769794aae0d7ab8d8b7b4d5eafd585d18)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>