src/multimedia/audio/qaudio_platform_implementation_support_p.h
@@ -96,6 +96,8 @@ public:
     void setRole(AudioEndpointRole role) override;
 
 protected:
+    void handleStreamOpenError();
+
     friend class QtMultimediaPrivate::QPlatformAudioSinkStream;
     friend StreamType;
     using ShutdownPolicy = QPlatformAudioIOStream::ShutdownPolicy;
@@ -141,6 +143,7 @@ void QPlatformAudioSinkImplementation<StreamType, DerivedType>::start(QIODevice 
                                             m_hardwareBufferFrames, m_role);
 
     if (!m_stream->open()) {
+        m_stream->requestStop();
         setError(QAudio::OpenError);
         m_stream = {};
         return;
@@ -149,6 +152,16 @@ void QPlatformAudioSinkImplementation<StreamType, DerivedType>::start(QIODevice 
     m_stream->start(device);
     updateStreamState(QAudio::ActiveState);
 }
+
+
+template <STREAM_TYPE_ARG, typename DerivedType>
+void QPlatformAudioSinkImplementation<StreamType, DerivedType>::handleStreamOpenError()
+{
+    m_stream->requestStop();
+    setError(QAudio::OpenError);
+    m_stream = {};
+}
+
 
 template <STREAM_TYPE_ARG, typename DerivedType>
 void QPlatformAudioSinkImplementation<StreamType, DerivedType>::start(AudioCallback &&audioCallback)
@@ -168,18 +181,12 @@ void QPlatformAudioSinkImplementation<StreamType, DerivedType>::start(AudioCallb
                                             static_cast<ConcreteSinkType *>(this), volume(),
                                             m_hardwareBufferFrames, m_role);
 
-    if (!m_stream->open()) {
-        setError(QAudio::OpenError);
-        m_stream = {};
-        return;
-    }
+    if (!m_stream->open())
+        return handleStreamOpenError();
 
     bool started = m_stream->start(std::move(audioCallback));
-    if (!started) {
-        setError(QAudio::OpenError);
-        m_stream = {};
-        return;
-    }
+    if (!started)
+        return handleStreamOpenError();
 
     updateStreamState(QAudio::ActiveState);
 }
@@ -197,8 +204,7 @@ QIODevice *QPlatformAudioSinkImplementation<StreamType, DerivedType>::start()
                                             m_hardwareBufferFrames, m_role);
 
     if (!m_stream->open()) {
-        setError(QAudio::OpenError);
-        m_stream = {};
+        handleStreamOpenError();
         return nullptr;
     }
 
@@ -386,6 +392,8 @@ public:
     void setVolume(float volume) override;
 
 protected:
+    void handleStreamOpenError();
+
     friend class QtMultimediaPrivate::QPlatformAudioSourceStream;
     friend StreamType;
     using ShutdownPolicy = QPlatformAudioIOStream::ShutdownPolicy;
@@ -414,6 +422,14 @@ QPlatformAudioSourceImplementation<StreamType, DerivedType>::~QPlatformAudioSour
 }
 
 template <STREAM_TYPE_ARG, typename DerivedType>
+void QPlatformAudioSourceImplementation<StreamType, DerivedType>::handleStreamOpenError()
+{
+    m_stream->requestStop();
+    setError(QAudio::OpenError);
+    m_stream = {};
+}
+
+template <STREAM_TYPE_ARG, typename DerivedType>
 void QPlatformAudioSourceImplementation<StreamType, DerivedType>::start(QIODevice *device)
 {
     if (!device) {
@@ -430,11 +446,8 @@ void QPlatformAudioSourceImplementation<StreamType, DerivedType>::start(QIODevic
                                             static_cast<ConcreteSourceType *>(this), volume(),
                                             m_hardwareBufferFrames);
 
-    if (!m_stream->open()) {
-        setError(QAudio::OpenError);
-        m_stream = {};
-        return;
-    }
+    if (!m_stream->open())
+        return handleStreamOpenError();
 
     m_stream->start(device);
     updateStreamState(QAudio::ActiveState);
@@ -453,8 +466,7 @@ QIODevice *QPlatformAudioSourceImplementation<StreamType, DerivedType>::start()
                                             m_hardwareBufferFrames);
 
     if (!m_stream->open()) {
-        setError(QAudio::OpenError);
-        m_stream = {};
+        handleStreamOpenError();
         return nullptr;
     }
 
@@ -598,18 +610,12 @@ void QPlatformAudioSourceImplementationWithCallback<StreamType, DerivedType>::st
             static_cast<typename BaseClass::ConcreteSourceType *>(this), BaseClass::volume(),
             BaseClass::m_hardwareBufferFrames);
 
-    if (!BaseClass::m_stream->open()) {
-        BaseClass::setError(QAudio::OpenError);
-        BaseClass::m_stream = {};
-        return;
-    }
+    if (!BaseClass::m_stream->open())
+        return BaseClass::handleStreamOpenError();
 
     bool started = BaseClass::m_stream->start(std::move(audioCallback));
-    if (!started) {
-        BaseClass::setError(QAudio::OpenError);
-        BaseClass::m_stream = {};
-        return;
-    }
+    if (!started)
+        return BaseClass::handleStreamOpenError();
 
     BaseClass::updateStreamState(QAudio::ActiveState);
 }
