src/multimedia/darwin/qdarwinaudiosink_p.h
@@ -29,7 +29,7 @@ QT_BEGIN_NAMESPACE
 class QDarwinAudioSink;
 
 class QCoreAudioSinkStream final : public std::enable_shared_from_this<QCoreAudioSinkStream>,
-                                   QtMultimediaPrivate::QPlatformAudioSinkStream
+                                   public QtMultimediaPrivate::QPlatformAudioSinkStream
 {
     using QPlatformAudioSinkStream = QtMultimediaPrivate::QPlatformAudioSinkStream;
     using AudioEndpointRole = QtMultimediaPrivate::AudioEndpointRole;
